# FOD_Detection

./: .gitignore  README.md  Technical_Design_Documentation.md
backend/: .env.example  pyproject.toml  requirements-cpu.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/alerts/: __init__.py  alert_manager.py  types.py
backend/app/api/: router.py
backend/app/camera/: __init__.py  camera_manager.py  frame_buffer.py  types.py
backend/app/core/: config.py  lifecycle.py  logging.py  paths.py
backend/app/detection/: __init__.py  config.py  detection_service.py  temporal_validator.py  types.py
backend/app/inference/: __init__.py  annotated_frame_store.py  inference_engine.py  model_adapter.py  model_loader.py  postprocessor.py  renderer.py  tensorrt_export.py  types.py
backend/app/monitoring/: performance_monitor.py  system_monitor.py
backend/app/schemas/: alert.py  config.py  detection.py  system.py
backend/app/storage/: __init__.py  database.py  evidence_store.py  models.py
backend/tests/: __init__.py  storage_helpers.py
backend/tests/fixtures/: test_runway.avi
backend/tests/integration/: test_camera_video_source.py  test_detections_api.py  test_health.py  test_live_runtime.py  test_runtime_routes.py  test_stream_route.py  test_system_status.py  test_websocket_route.py
backend/tests/regression/: test_app_import.py
backend/tests/unit/: test_alert_manager.py  test_annotated_frame_store.py  test_camera_manager.py  test_config.py  test_detection_repository.py  test_evidence_store.py  test_frame_buffer.py  test_inference_engine.py  (+12 more)
(+42 files in other folders)
