[project]
name = "fod-detection-backend"
version = "0.1.0"
description = "Backend for the single-camera FOD detection prototype."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "numpy==2.2.6",
    "opencv-python-headless==4.12.0.88",
    "SQLAlchemy==2.0.41",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
